--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,4 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = [
-    "fuzzywuzzy>=0.18.0",
-    "matplotlib>=3.10.7",
-    "scikit-learn>=1.7.2",
-    "transformers-stream-generator>=0.0.5",
-    "vllm>=0.11.0",
-]
+dependencies = []
